# fedem-solvers

./: .gitattributes  BUILD.md  CHANGELOG.md  CMakeLists.txt  README.md
.github/: CONTRIBUTING.md
.github/scripts/: check_doc.sh  get_version.sh  test_fedempy.sh
.github/workflows/: build_doc.yml  build_fedempy.yml  build_fmu.yml  build_solvers.yml  run_fedempy_test.yml  run_test.yml  versioning.yml
.reuse/: dep5
FMU/: CMakeLists.txt
PythonAPI/: CMakeLists.txt  README.md  requirements.txt  setup.py
PythonAPI/PythonAPITests/: test_Microbatch.py
PythonAPI/doc/: make.sh
PythonAPI/doc/source/: conf.py  howto-install.rst
PythonAPI/src/fedempy/: enums.py  exporter.py  fmm.py  fmm_solver.py  inverse.py  modeler.py  reducer.py  solver.py
cfg/: RELEASE
docs/: FFCmdLineArgInterface_8C.html  FFCmdLineArgInterface_8C__incl.map  FFCmdLineArgInterface_8H.html  FFCmdLineArgInterface_8H__dep__incl.map  FFCmdLineArgInterface_8H__incl.map  FFCmdLineArgInterface_8H__incl.md5  FFCmdLineArgInterface_8H_source.html  FFa3DLocation_8C.html  FFa3DLocation_8C__incl.map  FFa3DLocation_8C__incl.md5  FFa3DLocation_8H.html  FFa3DLocation_8H__dep__incl.map  FFa3DLocation_8H__dep__incl.md5  FFa3DLocation_8H__incl.map  FFa3DLocation_8H__incl.md5  FFa3DLocation_8H_source.html  FFa3PArc_8C.html  FFa3PArc_8C__incl.map  FFa3PArc_8C__incl.md5  FFa3PArc_8H.html  FFa3PArc_8H__dep__incl.map  FFa3PArc_8H__dep__incl.md5  FFa3PArc_8H__incl.map  FFa3PArc_8H__incl.md5  FFa3PArc_8H_source.html  FFaAlgebra_8C.html  FFaAlgebra_8C__incl.map  FFaAlgebra_8H.html  FFaAlgebra_8H__dep__incl.map  FFaAlgebra_8H_source.html  FFaAppInfo_8C.html  FFaAppInfo_8C__incl.map  FFaAppInfo_8H.html  FFaAppInfo_8H__dep__incl.map  FFaAppInfo_8H__incl.map  FFaAppInfo_8H_source.html  FFaBasicOperations_8C.html  FFaBasicOperations_8C__incl.map  FFaBasicOperations_8H.html  FFaBasicOperations_8H__dep__incl.map  (+3546 more)
docs/fedempy/: divergence.html  dts_operators.html  enums.html  exporter.html  fmm.html  fmm_solver.html  genindex.html  howto-install.html  howto-modeling.html  howto-solving.html  howtos.html  index.html  inverse.html  modeler.html  modules.html  objects.inv  py-modindex.html  reducer.html  search.html  searchindex.js  solver.html  write_fmx.html  yaml_parser.html
docs/search/: all_0.js  all_10.js  all_11.js  all_12.js  all_15.js  all_16.js  all_17.js  all_19.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_c.js  all_e.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_14.js  classes_2.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_b.js  classes_c.js  classes_e.js  classes_f.js  defines_4.js  defines_5.js  defines_8.js  defines_9.js  defines_b.js  defines_c.js  defines_d.js  enums_0.js  enums_2.js  enums_3.js  enums_4.js  (+74 more)
docs/solver/: FFCmdLineArgInterface_8C.html  FFCmdLineArgInterface_8C__incl.map  FFCmdLineArgInterface_8C__incl.md5  FFCmdLineArgInterface_8H.html  FFCmdLineArgInterface_8H__dep__incl.md5  FFCmdLineArgInterface_8H_source.html  FFa3DLocation_8C.html  FFa3DLocation_8C__incl.map  FFa3DLocation_8C__incl.md5  FFa3DLocation_8H.html  FFa3DLocation_8H__incl.map  FFa3DLocation_8H__incl.md5  FFa3DLocation_8H_source.html  FFa3PArc_8C.html  FFa3PArc_8C__incl.map  FFa3PArc_8C__incl.md5  FFa3PArc_8H.html  FFa3PArc_8H__dep__incl.map  FFa3PArc_8H__dep__incl.md5  FFa3PArc_8H__incl.map  FFa3PArc_8H__incl.md5  FFa3PArc_8H_source.html  FFaAlgebra_8C.html  FFaAlgebra_8C__incl.map  FFaAlgebra_8C__incl.md5  FFaAlgebra_8H.html  FFaAlgebra_8H__dep__incl.md5  FFaAlgebra_8H_source.html  FFaAppInfo_8C.html  FFaAppInfo_8C__incl.map  FFaAppInfo_8C__incl.md5  FFaAppInfo_8H.html  FFaAppInfo_8H__dep__incl.md5  FFaAppInfo_8H__incl.md5  FFaAppInfo_8H_source.html  FFaBasicOperations_8C.html  FFaBasicOperations_8C__incl.map  FFaBasicOperations_8C__incl.md5  FFaBasicOperations_8H.html  FFaBasicOperations_8H__dep__incl.md5  (+3875 more)
src/: Doxyfile.solver.in  README.md
src/FMU/: CMakeLists.txt  fmu_template.C
src/Femlib/: CMakeLists.txt  beam.f  beamaux.f  qbek.f
src/SolutionMapper/: CMakeLists.txt  main.C
src/vpmCommon/: SignalHandler.C  SignalHandler.H  rdbModule.f90  samModule.f90  supElTypeModule.f90
src/vpmCommon/vpmLinAlg/: CMakeLists.txt  asmExtensionModule.f90  feDataModel.f90  feDataModule.f90  feDataRoutines.f90  feLanczosModule.f90  solExtensionModule.f90  sysMatrixTypeModule.f90
src/vpmCommon/vpmLinAlg/vpmLinAlgDummy/: CMakeLists.txt  dummyFELinearSolver.f90
src/vpmCommon/vpmLinAlg/vpmLinAlgTests/: CMakeLists.txt  testModels.C  testSysMat.pf
src/vpmReducer/: CMakeLists.txt  cfemReducer.f90  cmstrs.f90  fmxWriter.f90  inadd.f90  inputReducerModule.f90  reducer.f90  reducerInterface.C  releaseSingeltons.C  rigidModule.f90  samReducerModule.f90  saveReducerModule.f90  solver.f90
src/vpmSolver/: CMakeLists.txt  addInSysModule.f90  contactElementRoutinesModule.f90  controlRoutinesModule.f90  controlTypeModule.f90  corotUtilModule.f90  dbgUnitsModule.f90  diffractionModule.f90  engineRoutinesModule.f90  extCtrlSysTypeModule.f90  finiteElementModule.f90  forceRoutinesModule.f90  forceTypeModule.f90  frictionRoutinesModule.f90  frictionTypeModule.f90  functionTypeModule.f90  genericPartModule.f90  hydroDynamicsModule.f90  initiateFrictionTypeModule.f90  initiateFunctionTypeModule.f90  initiateJointTypeModule.f90  initiateModule.f90  initiateSensorTypeModule.f90  initiateSpringTypeModule.f90  initiateSupElTypeModule.f90  initiateSystemTypeModule.f90  initiateTriadTypeModule.f90  initiateUserdefElTypeModule.f90  inverseModule.f90  main.C  mainpage.dox.in  massMatCorrModule.f90  massTypeModule.f90  masterSlaveJointTypeModule.f90  newmarkRoutinesModule.f90  normTypeModule.f90  sensorTypeModule.f90  solverDriver.f90  solverInterface.C  solverInterface.h  (+7 more)
src/vpmStress/: CMakeLists.txt  displacementModule.f90  elStressModule.f90  fpp.f90  gage.f90  initiateStressModule.f90  modes.f90  saveStrainGageModule.f90  saveStressModule.f90  strainAndStressUtils.f90  strainCoatModule.f90  strainGageModule.f90  strainRosetteModule.f90  stress.f90  stressRoutines.f90
src/vpmUtilities/: CMakeLists.txt  (+4 more)
(+245 files in other folders)
